# NEStor

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
nescore/: CMakeLists.txt
nescore/include/: CPU.h  ICartridge.h  IMemory.h  NESCoreException.h  NESMemory.h  NROMCartridge.h  ROMFile.h  basic_types.h
nescore/src/: CPU.cpp  NESMemory.cpp  NROMCartridge.cpp  ROMFile.cpp
nescore/test/: CMakeLists.txt  CPUArithmeticTest.cpp  CPUBranchingTest.cpp  CPUFlagTest.cpp  CPUGeneralTest.cpp  CPUIncreaseDecreaseTest.cpp  CPUJumpTest.cpp  CPULoadStoreTest.cpp  CPUMiscellaneousTest.cpp  CPUStackTest.cpp  CPUTest.cpp  CPUTest.h  CPUTestSuite.cpp  CPUTransferTest.cpp  FilePaths.h.in  ROMFileTest.cpp  TestMemory.cpp  TestMemory.h
